# hyp3-autorift

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trufflehog.txt  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  conda-env.yml  environment.yml  environment_isce2.yml  pyproject.toml  requirements-isce3.txt  requirements-radar.txt  requirements-static.txt  ruff.toml  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  changelog.yml  create-jira-issue.yml  labeled-pr.yml  release-template-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml  test.yml  validate-cff.yml
.gitlab/: gitleaks.toml
.gitlab/issue_templates/: default.md
docs/: api_example.md  sdk_example.ipynb
hyp3_autorift/: __init__.py  __main__.py  crop.py  geometry.py  image.py  io.py  netcdf_output.py  process.py  s1_correction.py  topsinsar_filename.py  util.py
hyp3_autorift/etc/: SConfigISCE  entrypoint.sh  install_autoRIFT_ISCE_conda.sh
hyp3_autorift/vend/: CHANGES-176.diff  CHANGES-183.diff  CHANGES-189.diff  CHANGES-194.diff  CHANGES-211.diff  CHANGES-213.diff  CHANGES-214.diff  CHANGES-223.diff  CHANGES-232.diff  CHANGES-L9.diff  CHANGES-METADATA-2.diff  CHANGES-METADATA-3.diff  CHANGES-METADATA.diff  CHANGES-PARAMETER-FILE.diff  CHANGES-S2-WEST.diff  CHANGES-UPSTREAM-78.diff  CHANGES-WALLIS-WIDTH.diff  CHANGES.diff  DATE_DT.diff  L8-PATCH.diff  NC-PATCH.diff  PRE109-PATCH-2.diff  PRE109-PATCH.diff  README.md  REF_VEL.diff  S2_FILENAMES.diff  nasa-jpl_autorift_78.diff  netcdf_output.py  single_scene_proc_optical_fetchDEM_full.py  testGeogridOptical.py  testGeogrid_ISCE.py  testautoRIFT.py  testautoRIFT_ISCE.py  topsinsar_filename.py
hyp3_autorift/vend/workflow/: format_tops_xml.py  netcdf_output.py  prepDEM.py  single_scene_proc_S1A_fetchDEM_full.py  topsinsar_filename.py
src/hyp3_autorift/: __init__.py  __main__.py  crop.py  geometry.py  image.py  nisar_isce3.py  process.py  s1.py  s1_alt.py  s1_correction.py  s1_isce2.py  s1_isce3.py  s1_rdr_static_files.py  s1_static_files.py  sentinel1_isce2.py  utils.py
src/hyp3_autorift/etc/: entrypoint.sh
src/hyp3_autorift/schemas/: rtc_s1_template.yaml  s1_cslc_template.yaml
src/hyp3_autorift/vend/: CHANGES-173.diff  CHANGES-176.diff  CHANGES-183.diff  CHANGES-191.diff  CHANGES-196.diff  CHANGES-211.diff  CHANGES-213.diff  CHANGES-214.diff  CHANGES-227.diff  CHANGES-235.diff  CHANGES-UPSTREAM-101.diff  CHANGES-UPSTREAM-106.diff  CHANGES-UPSTREAM-107.diff  CHANGES-UPSTREAM-79.diff  CHANGES.diff  README.md  netcdf_output.py  testGeogrid.py  testGeogridOptical.py  testGeogrid_ISCE.py  testautoRIFT.py  testautoRIFT_ISCE.py
src/hyp3_autorift/vend/geo_autoRIFT/autoRIFT/: autoRIFT.py
src/hyp3_autorift/vend/geo_autoRIFT/geogrid/: Geogrid.py  geogrid
src/hyp3_autorift/vend/geo_autoRIFT/geogrid/include/: geogrid.h
src/hyp3_autorift/vend/geo_autoRIFT/geogrid/src/: geogrid.cpp
src/hyp3_autorift/vend/workflow/: README.md  bbox_dem_trunc.py
tests/: conftest.py  test_crop.py  test_entrypoints.py  test_geometry.py  test_image.py  test_io.py  test_netcdf_output.py  test_process.py  test_s1.py  test_s1_isce2.py  test_util.py  test_utils.py
tests/data/: LT05_L1GS_219121_19841206_20200918_02_T2_X_LT05_L1GS_226120_19850124_20200918_02_T2_G0120V02_P000.nc  S2A_MSIL1C_20160616T112217_N0204_R137_T29QKF_20160617T193500.manifest.safe  S2B_MSIL1C_20200419T060719_N0209_R105_T38EMQ_20200419T091056.manifest.safe  T55XEE_20200911T034541_B08.jp2  T60CWU_20160414T200612_B08.jp2
