[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3_autorift"
requires-python = ">=3.9"
authors = [
    {name="ASF APD/Tools Team", email="uaf-asf-apd@alaska.edu"},
]
description = "A HyP3 plugin for feature tracking processing with AutoRIFT-ISCE"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    'boto3',
    'botocore',
    'gdal',
    'h5netcdf',
    'matplotlib',
    'netCDF4',
    'numpy',
    'pyproj',
    'requests',
    'scipy',
    'xarray',
    'hyp3lib>=3,<4',
    's1_orbits',
]
dynamic = ["version"]

[project.optional-dependencies]
develop = [
    'ruff',
    'pillow',
    'pytest',
    'pytest-cov',
    'pytest-console-scripts',
    'responses',
]

[project.scripts]
hyp3_autorift = "hyp3_autorift.process:main"
s1_correction = "hyp3_autorift.s1_correction:main"

[project.urls]
Homepage = "https://github.com/ASFHyP3/hyp3-autorift"
"Bug Tracker" = "https://github.com/ASFHyP3/hyp3-autorift/issues"
Documentation = "https://hyp3-docs.asf.alaska.edu"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
exclude = ["vend"]
line-length = 120
# The directories to consider when resolving first- vs. third-party imports.
# See: https://docs.astral.sh/ruff/settings/#src
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    # TODO: Uncomment the following extensions and address their warnings:
    # "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    # "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
disable_error_code = ["import-untyped"]
exclude = ["/vend/"]

[[tool.mypy.overrides]]
module = "hyp3_autorift.vend.*"
follow_imports = "skip"
